# server/src/api/todo/todo.openapi.yml
@@ -70,6 +70,10 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Todo'
 ## Components vs Schemas
 components:
   schemas:
